# MA-Repo

./: .gitignore  README.md  pyproject.toml
acmg-validation-tool/: groundtruth.py  validation.py
