[tool.poetry]
name = "acmg-validation-tool"
version = "0.1.0"
description = ""
authors = ["Andrey-Ukhnalyov-20 <andrey_ukhnalev20@mail.ru>"]
readme = "README.md"
packages = [{include = "acmg_validation_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
argparse = "^1.4.0"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
